--- a/readme
+++ b/readme
@@ -1,12 +1,21 @@
-Here is a simple plist for plex media server to keep it up and running on osx. Download the zip Prior to install change the __USERNAME__ string in the plist with your username. Open terminal then enter these commands:
 
-sudo su
-# Change directory to the com.plex.pms.plist-master
-chmod +x install.bash
-./install.bash
+How I am Using This:
+Make a service user-account using the script I have in my other repo [ServiceAccountMaker](https://github.com/darwingr/ServiceAccountMaker).
+enter `$ sudo .mk_service_user.sh plex`
+Currently looks for the pms.app is in /Applications
 
-If you need to unload the plist for any reason open terminal then enter these commands:
+IMPORTANT
+The project still needs a bit of work and in fact FAILS to load on system startup.
+This is due to the plex menubar item needing the "WindowServer" to be reachable,
+which requires a user to be logged in locally.
+For the time being I do the following after my first login after reboot:
+`sudo launchctl stop com.boot2plex.plexserverd`
+`sudo launchctl start com.boot2plex.plexserverd`
 
-sudo su
-cd /Library/LaunchDaemons
-launchctl unload com.plex.pms.plist
+INSTALLATION
+# Change directory (in terminal) where you unzipped or cloned Boot2Plex-master
+sudo chmod +x install.bash
+# makes it executable
+sudo ./install.bash
+
+Run this anytime you make edits to the plist.
