--- a/readme
+++ b/readme
@@ -1,3 +1,8 @@
+GOAL
+Be able to run plex media server on Mac OS X from system startup as an unpriviledged user.
+
+Primarily avoids need to run as login item on personal account with autologin,
+while accomodating power loss.
 
 How I am Using This:
 Make a service user-account using the script I have in my other repo [ServiceAccountMaker](https://github.com/darwingr/ServiceAccountMaker).
@@ -14,7 +19,7 @@ For the time being I do the following after my first login after reboot:
 
 INSTALLATION
 # Change directory (in terminal) where you unzipped or cloned Boot2Plex-master
-sudo chmod +x install.bash
+
 # makes it executable
 sudo ./install.bash
 
